--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+.background-img {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -69,7 +69,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
